# lunatix

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  dbg  flake.nix  qemu.dtb  qemu.dtb.txt  qemu_sifive_u.dtb  qemu_sifive_u.dtb.txt  run_kernel.sh  run_test.sh  rust-toolchain.toml  uboot_build.sh
kernel/: Cargo.toml  build.rs
kernel/kernel/: Cargo.toml  build.rs
kernel/kernel/src/: argv_iter.rs  devtree.rs  init.rs  ipc.rs  lib.rs  logging.rs  main.rs  mem.rs  printk.rs  sched.rs  trap.rs  uapi.rs  virtmem.rs
kernel/kernel/src/caps/: asid.rs  cspace.rs  devmem.rs  endpoint.rs  iface.rs  irq.rs  irq_control.rs  memory.rs  mod.rs  notification.rs  page.rs  prelude.rs  task.rs  vspace.rs
kernel/kernel/src/init/: mod.rs  riscv64.rs  userspace.rs  x86_64.rs
kernel/kernel/src/syscalls/: alloc_page.rs  asid_control.rs  assign_ipc_buffer.rs  call.rs  copy.rs  debug.rs  debug_log.rs  debug_putc.rs  derive_from_mem.rs  destroy.rs  devmem.rs  exit.rs  handler_trait.rs  identify.rs  irq.rs  irq_complete.rs  irq_control_claim.rs  map_devmem.rs  map_page.rs  mem.rs  mod.rs  page.rs  receive.rs  send.rs  system_reset.rs  task.rs  task_assign_control_registers.rs  task_assign_cspace.rs  task_assign_vspace.rs  utils.rs  wait_on.rs  yield.rs  yield_to.rs
kernel/kernel_loader/: Cargo.toml  build.rs
kernel/kernel_loader/src/: allocator.rs  args.rs  devtree.rs  elfloader.rs  logging.rs  main.rs  trap.rs  user_args.rs  virtmem.rs
kernel/libkernel/: Cargo.toml  build.rs
kernel/libkernel/src/: argv_iter.rs  lib.rs  log.rs  mem.rs  print.rs  sbi_log.rs
kernel/libkernel/src/caps/: capability.rs  cspace.rs  memory.rs  mod.rs  task.rs  vspace.rs
kernel/libkernel/src/device_info/: mod.rs
kernel/libkernel/src/mem/: mod.rs  page_table.rs  page_table_entry.rs  pt.rs  ptrs.rs
kernel/libkernel/src/print/: mod.rs  x86_64_print.rs
kernel/riscv/: Cargo.toml  build.rs
kernel/riscv/src/: asm_utils.rs  cpu.rs  lib.rs  power.rs  pt.rs  timer.rs  trap.rs  utils.rs
kernel/riscv/src/asm/: asm_utils.S  trap.S
kernel/riscv/src/mem/: mapping.rs  mod.rs  paddr.rs  page_table_entry.rs  page_tables.rs  vaddr.rs
kernel/src/: init.rs  main.rs  mem.rs  printk.rs  registers.rs  userspace.rs  virtmem.rs
kernel/src/arch/riscv64imac/: asm_utils.rs  cpu.rs  mod.rs  trap.rs
kernel/src/caps/: cspace.rs  memory.rs  mod.rs  task.rs  vspace.rs
kernel/src/device_drivers/: mod.rs  uart.rs
kernel/syscall_abi/: Cargo.toml
kernel/syscall_abi/src/: alloc_page.rs  assign_ipc_buffer.rs  caddr.rs  call.rs  copy.rs  debug.rs  debug_log.rs  debug_putc.rs  derive_from_mem.rs  destroy.rs  errors.rs  exit.rs  generic_return.rs  identify.rs  inspect_derivation_tree.rs  ipc_tag.rs  irq_complete.rs  irq_control_claim.rs  lib.rs  map_devmem.rs  map_page.rs  receive.rs  send.rs  system_reset.rs  task_assign_control_registers.rs  task_assign_cspace.rs  task_assign_vspace.rs  traits.rs  utils.rs  wait_on.rs  yield.rs  yield_to.rs
support_crates/allocators/: Cargo.toml
support_crates/allocators/src/: arena_allocator.rs  boundary_tag_alloc.rs  bump_allocator.rs  bump_box.rs  custom_box.rs  lib.rs  stack_allocator.rs  traits.rs
support_crates/allocators/src/boundary_tag_alloc/: allocator.rs  mod.rs  tags.rs  tests.rs
support_crates/allocators/src/bump_allocator/: backward_alloc.rs  bump_alloc_trait.rs  bump_box.rs  forward_alloc.rs  mod.rs
support_crates/derivation_tree/: Cargo.toml
support_crates/derivation_tree/src/: as_static_ref.rs  cap_counted.rs  cell.rs  chain.rs  correspondence.rs  cspace.rs  cursors.rs  lib.rs  node.rs  refs.rs  tree.rs  tree_iter.rs  tree_node.rs  uninit.rs
support_crates/derivation_tree/src/caps/: cspace.rs  iface.rs  memory.rs  mod.rs  test_union.rs  uninit.rs  uninit_slot.rs
support_crates/derivation_tree/src/intrusive/: linked_list.rs  linked_list_v1.rs  mod.rs
support_crates/derivation_tree/src/tree/: collection.rs  cursors.rs  iterator.rs  mod.rs  node.rs
support_crates/derivation_tree/tests/: tree.rs
support_crates/derivation_tree_old/: Cargo.toml
support_crates/derivation_tree_old/src/: lib.rs
support_crates/derivation_tree_old/src/intrusive/: mod.rs
support_crates/derivation_tree_old/tests/: tree.rs
support_crates/device_tree/: Cargo.toml
support_crates/device_tree/src/: lib.rs
support_crates/device_tree/src/fdt/: dtb.rs  header.rs  memory_reservation.rs  mod.rs  strings.rs
support_crates/klog/: Cargo.toml
support_crates/klog/src/: kernel_logger.rs  lib.rs
support_crates/klog/src/print/: sbi_print.rs
support_crates/ksync/: Cargo.toml
support_crates/ksync/src/: spin_lock.rs
support_crates/uart_driver/: Cargo.toml
support_crates/uart_driver/src/: lib.rs
userspace/bins/echo_client/: Cargo.toml
userspace/bins/echo_client/src/: main.rs
userspace/bins/init/: Cargo.toml
userspace/bins/init/src/: draw.rs  elfloader.rs  gpu.rs  logger.rs  (+6 more)
userspace/bins/stage0_init/: Cargo.toml
userspace/bins/walk_cspace/: Cargo.toml
userspace/hello_world/: Cargo.toml
userspace/hello_world/src/: main.rs
userspace/init/: Cargo.toml
userspace/init/src/: caddr_alloc.rs  commands.rs  elfloader.rs  main.rs  read.rs  second_task.rs  sifive_uart.rs  static_vec.rs
userspace/io/: Cargo.toml
userspace/io/src/: lib.rs  read.rs
userspace/librust/: Cargo.toml
userspace/librust/src/: alloc_page.rs  asid.rs  assign_ipc_buffer.rs  derive_from_mem.rs  devmem.rs  identify.rs  ipc.rs  irq.rs  irq_complete.rs  irq_control.rs  irq_control_claim.rs  lib.rs  map_devmem.rs  map_page.rs  mem.rs  memory.rs  page.rs  print.rs  syscalls.rs  task.rs  task_assign_control_registers.rs  task_assign_cspace.rs  task_assign_vspace.rs  wait_on.rs  yield.rs  yield_to.rs
userspace/libs/lunatix_manifest/: Cargo.toml
userspace/libs/mmap/: Cargo.toml
userspace/libs/p9/: Cargo.toml
userspace/libs/virtio/: Cargo.toml
userspace/libs/virtio_gpu/: Cargo.toml
userspace/libs/virtio_p9/: Cargo.toml
userspace/virtio/: Cargo.toml
userspace/virtio/src/: lib.rs
userspace/virtio_p9/: Cargo.toml
userspace/virtio_p9/src/: lib.rs
(+188 files in other folders)
