[workspace]
members = [
    "kernel/*",
    "support_crates/*",
    "userspace/librust",
    "userspace/init",
]

[profile.dev]
panic = 'abort'

[profile.release]
strip = "symbols"   # Strip all symbols from final binary
panic = 'abort'     # Abort on panic
codegen-units = 1   # Reduce number of codegen units to increase optimizations


# for extra small binaries, set:
#   opt-level = 's'
# or even:
#   opt-level = 'z'
