[workspace]
resolver = "2"
members = [
    "kernel/*",
    "support_crates/*",
    "userspace/bins/*",
    "userspace/libs/*",
]
default-members = ["kernel/kernel"]

[workspace.package]
authors = [ "Finn Sell <dev@ftsell.de>", "rnxpyke <rnxpyke@gmail.com>" ]
repository = "https://github.com/gedankenpresse/lunatix"
license-file = "LICENSE"
publish = false
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = 'abort'

[profile.release]
strip = "symbols"   # Strip all symbols from final binary
panic = 'abort'     # Abort on panic
codegen-units = 1   # Reduce number of codegen units to increase optimizations


# for extra small binaries, set:
#   opt-level = 's'
# or even:
#   opt-level = 'z'
