[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt-rs = { version = "0.4.3", default-features = false }
r0 = "1.0.0"
rlibc = "1.0.0"
thiserror-no-std = "2.0.2"
elfloader = "0.16.0"
ksync = { path = "../support_crates/ksync" }
memory = { path = "../support_crates/alloc" }

[build-dependencies]
cc = "1.0.79"
