[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
autotests = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libkernel = { path = "../libkernel" }
fdt-rs = { version = "0.4.3", default-features = false }
r0 = "1.0.0"
rlibc = "1.0.0"
thiserror-no-std = "2.0.2"
ksync = { path = "../../support_crates/ksync" }
allocators = { path = "../../support_crates/allocators" }
regs = { path = "../../support_crates/regs" }
elfloader = { git = "https://github.com/gz/rust-elfloader.git", branch = "master" }
bitflags = "2.3.2"
log = { version = "0.4.19", default-features = false, features = ["release_max_level_debug"] }
align-data = "0.1.0"
derivation_tree = { version = "0.1.0", path = "../../support_crates/derivation_tree" }



[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi = "0.2.0"
sifive_shutdown_driver = { path = "../../support_crates/sifive_shutdown_driver" }

[build-dependencies]
cc = "1.0.79"
