[package]
name = "kernel_loader"
description = "an elf binary to setup virtual memory and load the kernel in high address ranges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libkernel = { path = "../libkernel" }
allocators = { path = "../../support_crates/allocators" }
elfloader = { git = "https://github.com/gz/rust-elfloader.git", branch = "master" }
log = { version = "0.4.19", default-features = false, features = ["release_max_level_info"] }
sbi_log = { path = "../../support_crates/sbi_log" }
sbi = "0.2.0"
bitflags = "2.2.1"
#kernel = { path = "../kernel", artifact = "bin" }  # only works with nightly cargo
fdt-rs = { version = "0.4.3", default-features = false }

[build-dependencies]
cc = "1.0.79"
