[package]
name = "kernel_loader"
description = "an elf binary to setup virtual memory and load the kernel in high address ranges"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocators = { path = "../../support_crates/allocators" }
elfloader = { git = "https://github.com/gz/rust-elfloader.git", branch = "master" }
log = { version = "0.4.19", default-features = false, features = ["release_max_level_debug"] }
sbi = "0.2.0"
bitflags = "2.2.1"
riscv = { version = "0.1.0", path = "../riscv" }
thiserror-no-std = "2.0.2"
klog = { version = "0.1.0", path = "../../support_crates/klog" }
device_tree = { path = "../../support_crates/device_tree" }

[build-dependencies]
cc = "1.0.79"
