[package]
name = "libkernel"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocators = { path = "../../support_crates/allocators" }
fdt-rs = { version = "0.4.3", default-features = false }
r0 = "1.0.0"
rlibc = "1.0.0"
thiserror-no-std = "2.0.2"
elfloader = { git = "https://github.com/gz/rust-elfloader.git", branch = "master" }
bitflags = "2.3.2"
log = { version = "0.4.19", default-features = false }
static_assertions = "1.1.0"


[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi = "0.2.0"

[build-dependencies]
cc = "1.0.79"
