[package]
name = "riscv"
description = "riscv specific code for the lunatix kernel"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
log = "0.4.19"
sbi = "0.2.0"
static_assertions = "1.1.0"
syscall_abi = { version = "0.1.0", path = "../syscall_abi" }

[build-dependencies]
cc = "1.0.79"
