[package]
name = "allocators"
version = "0.2.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksync = { path = "../ksync" }
thiserror-no-std = "2.0.2"
log = "0.4.19"
