[package]
name = "derivation_tree_old"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocators = { path = "../allocators" }
ctors = { path = "../ctors" }

[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
rand = "0.8.5"
