[package]
name = "klog"
description = "a log implementation for the lunatix kernel"
authors.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"

[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi = "0.2.0"
