[package]
name = "uart_driver"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regs = { path = "../regs" }
fdt-rs = { version = "0.4.3", default-features = false }
