[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
lto = true

[dependencies]
librust = { version = "0.1.0", path = "../librust" }

[build-dependencies]
cc = "1.0.79"
