[package]
name = "init"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-vec = { version = "0.5.0", default-features = false }
allocators = { version = "0.1.0", path = "../../support_crates/allocators" }
bitflags = "2.4.1"
caddr_alloc = { version = "0.1.0", path = "../caddr_alloc" }
elfloader = "0.16.0"
fdt = "0.1.5"
ksync = { version = "0.1.0", path = "../../support_crates/ksync" }
librust = { version = "0.1.0", path = "../librust" }
log = "0.4.20"
p9 = { version = "0.1.0", path = "../p9" }
regs = { version = "0.1.0", path = "../../support_crates/regs" }
uart_driver = { version = "0.1.0", path = "../../support_crates/uart_driver" }
virtio = { version = "0.1.0", path = "../virtio" }

[build-dependencies]
cc = "1.0.79"
