[package]
name = "init"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocators = { version = "0.1.0", path = "../../support_crates/allocators" }
caddr_alloc = { version = "0.1.0", path = "../caddr_alloc" }
elfloader = "0.16.0"
fdt = "0.1.5"
ksync = { version = "0.1.0", path = "../../support_crates/ksync" }
io = { version = "0.1.0", path = "../io" }
librust = { version = "0.1.0", path = "../librust" }
log = "0.4.20"
p9 = { version = "0.1.0", path = "../p9" }
regs = { version = "0.1.0", path = "../../support_crates/regs" }
uart_driver = { version = "0.1.0", path = "../../support_crates/uart_driver" }
virtio_p9 = { version = "0.1.0", path = "../virtio_p9" }

[build-dependencies]
cc = "1.0.79"
