[package]
name = "io"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-vec = { version = "0.5.0", default-features = false }
librust = { version = "0.1.0", path = "../librust" }
