[package]
name = "librust"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall_abi = { path = "../../kernel/syscall_abi" }
