[package]
name = "virtio"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
caddr_alloc = { version = "0.1.0", path = "../caddr_alloc" }
librust = { version = "0.1.0", path = "../librust" }
regs = { version = "0.1.0", path = "../../support_crates/regs" }
