[package]
name = "echo_client"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
lto = true

[dependencies]
liblunatix = { version = "0.1.0", path = "../../libs/liblunatix" }

[build-dependencies]
cc = "1.0.79"
