[package]
name = "init"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocators = { version = "0.2.0", path = "../../../support_crates/allocators" }
caddr_alloc = { version = "0.1.0", path = "../../libs/caddr_alloc" }
elfloader = "0.16.0"
fdt = "0.1.5"
ksync = { version = "0.1.0", path = "../../../support_crates/ksync" }
io = { version = "0.1.0", path = "../../libs/io" }
liblunatix = { version = "0.1.0", path = "../../libs/liblunatix" }
log = "0.4.20"
p9 = { version = "0.1.0", path = "../../libs/p9" }
regs = { version = "0.1.0", path = "../../../support_crates/regs" }
uart_driver = { version = "0.1.0", path = "../../../support_crates/uart_driver" }
virtio_p9 = { version = "0.1.0", path = "../../libs/virtio_p9" }
virtio = { version = "0.1.0", path = "../../libs/virtio" }

[build-dependencies]
cc = "1.0.79"
