[package]
name = "walk_cspace"
authors.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liblunatix = { version = "0.1.0", path = "../../libs/liblunatix" }
log = "0.4.20"

[build-dependencies]
cc = "1.0.79"
