[package]
name = "lunatix_manifest"
description = "a library for reading the lunatix manifest format"
authors.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini_core = "0.2.0"
