[package]
name = "virtio_p9"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caddr_alloc = { version = "0.1.0", path = "../caddr_alloc" }
io = { version = "0.1.0", path = "../io" }
liblunatix = { version = "0.1.0", path = "../liblunatix" }
p9 = { version = "0.1.0", path = "../p9" }
virtio = { version = "0.1.0", path = "../virtio" }
